back to/corrected files.. topic: 11_9_BEM_Practice.. / style.css (added: align-items: flex-start, for li/Contacts.. obvious hack)

--- a/Core_Courses/2_Web_Layout_Basic_Level/11_Advanced_CSS_Part_2/11_9_BEM_Practice_Renaming_classes_project_Lionic_Using_HTML_tree_generator/css/style.css
+++ b/Core_Courses/2_Web_Layout_Basic_Level/11_Advanced_CSS_Part_2/11_9_BEM_Practice_Renaming_classes_project_Lionic_Using_HTML_tree_generator/css/style.css
@@ -578,6 +578,7 @@ body {
 
 .contacts__item {
   flex-direction: column;
+  align-items: flex-start;
   padding-top: 48px;
   width: 370px;
   background-position: left top;
@@ -624,14 +625,6 @@ body {
   line-height: 180%;
   color: #787878;
   transition: color 0.3s ease-in-out;
-}
-
-.item-link-phone {
-  width: 121px;
-}
-
-.item-link-mail {
-  width: 157px;
 }
 
 .contacts__item-link:focus {
